update the vowel-purchase page to have social media spam buttons

--- a/config/global_config_example.yml
+++ b/config/global_config_example.yml
@@ -1,2 +1,5 @@
 #for use in mailers and other objects that dont have access to request vars
 base_url: 'http://imf.localhost'
+
+#for the like button
+facebook_app_id: '12345'
